--- a/CV.html
+++ b/CV.html
@@ -48,7 +48,7 @@
     <h1 id="publications">CV</h1>
     <br> My name <strong>Quoc Hung Le</strong> is bolded in publications belows<br> 
     
-    My full CV in <a href="./files/CV_Quoc_Hung_Le.pdf">PDF</a> <br>
+    My full CV in <a href="./pdf/lqh cv.pdf">PDF</a> <br>
 
     <h2>Publications</h2> <hr>
     <h3>2025</h3>
