--- a/CV.html
+++ b/CV.html
@@ -107,6 +107,15 @@
                 <strong>CSC505</strong> Design and Analysis of Algorithms, Fall 2025
             </div>
 
+            <h2>Honors and awards</h2> <hr>
+<p
+></p>
+
+
+<div style="font-size: 18px; color: black; margin-bottom: 4px;">
+                <strong>Summer Graduate Merit Award  2025 </strong> Awarded by North Carolina State University for outstanding graduate students (3000$)
+            </div>
+
 
 
     <footer>
