--- a/CV.html
+++ b/CV.html
@@ -59,7 +59,7 @@
         
         <div>
             <div style="font-size: 18px; font-weight: 600; color: #0056D2; margin-bottom: 4px;">
-                Optimizing Spectral Signature in Code Backdoor Detection
+                Spectral Signature in Code Backdoor Detection, How far are we?
             </div>
             <div style="font-size: 18px; color: black; margin-bottom: 4px;">
                 <strong>Quoc Hung Le</strong>, Thanh Le-Cong, Bach Le, Bowen Xu
@@ -68,7 +68,7 @@
                 <span style="font-style: italic;">TL;DR:</span> In this paper, we revisit the applicability of Spectral Signature-based defenses in the context of backdoor attacks on code models. We explored the impact of different settings of the Spectral Signature. We discovered a new proxy metric that can more accurately estimate the actual performance of Spectral Signature without model retraining after the defense.
             </div>
             <div style="font-size: 18px; color: #0056D2; font-style: italic; margin-top: 4px;">
-                Submitted to ACM International Conference on the Foundations of Software Engineering (FSE) 2025, 
+                Submitted to Arxiv, 2025
             </div>
             <div style="font-size: 18px; color: #0056D2; font-style: italic; margin-top: 4px;">
                 <a href="./papers/FSE_25___Code_LLM_Backdoor_defense-2.pdf" style="margin-left: 0px;"><img src="https://img.shields.io/badge/PDF-b31b1b.svg" style="vertical-align: middle;"></a>
